[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Craig S. Cottingham <craig@cottingham.net>"]
edition = "2018"

[lib]
name = "common"
path = "src/common.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
itertools = "0.9.0"
regex = "1.4.2"
unicode-segmentation = "1.7.1"
